Bug 790424 (part 1) - Set strict mode on functions in default arguments more lazily.  code=benjamin,nnethercote.  r=nnethercote.

--HG--
extra : rebase_source : f386bd1f17b850f421e3c914e1b31e0a25c82119